data/derived/sp14/progs/unify/prog3520.ml.out
Characters 198-202:
  let (bar, res) = List.fold_left f base args in
                                         ^^^^
Error: This expression has type ('a * 'b) list
       but an expression was expected of type (int list * int list) list list
       Type 'a * 'b is not compatible with type (int list * int list) list 
